<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/header_bg">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/quiz_logo"
                android:layout_centerInParent="true"
                android:contentDescription="@string/logo_des"/>

            <TextView
                style="@style/header_text"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">

            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_1"/>
                    <RadioGroup
                        android:id="@+id/ques_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_opt_1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_opt_2"/>
                        <RadioButton
                            android:id="@+id/q1_corr_ans"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_opt_3"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q1_opt_4"/>
                    </RadioGroup>
                </LinearLayout>

            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_2"/>
                    <CheckBox
                        android:id="@+id/q2_opt_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_opt_1"/>
                    <CheckBox
                        android:id="@+id/q2_opt_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_opt_2"/>
                    <CheckBox
                        android:id="@+id/q2_opt_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_opt_3"/>
                    <CheckBox
                        android:id="@+id/q2_opt_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_opt_4"/>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_3"/>
                    <RadioGroup
                        android:id="@+id/ques_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/q3_corr_ans"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_opt_1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_opt_2"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_opt_3"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3_opt_4"/>
                    </RadioGroup>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_4"/>
                    <RadioGroup
                        android:id="@+id/ques_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_opt_1"/>
                        <RadioButton
                            android:id="@+id/q4_corr_ans"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_opt_2"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_opt_3"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q4_opt_4"/>
                    </RadioGroup>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_5"/>
                    <CheckBox
                        android:id="@+id/q5_opt_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_opt_1"/>
                    <CheckBox
                        android:id="@+id/q5_opt_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_opt_2"/>
                    <CheckBox
                        android:id="@+id/q5_opt_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_opt_3"/>
                    <CheckBox
                        android:id="@+id/q5_opt_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_opt_4"/>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ques_6"/>

                    <EditText
                        android:id="@+id/ques_6_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/ques_5_hint"
                        android:inputType="text" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/card_style"
            android:background="@drawable/card_bg">
            <FrameLayout
                style="@style/frame_style">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center_horizontal"
                    android:onClick="quizSubmit"
                    />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>